--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,11 @@ name = "vista"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
+sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
+serde = { version = "1.0", features = ["derive"] }
+confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
