--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2024"
 [features]
 default = []
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
 sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
+opencv = "0.94.4"
+entity = { path = "entity" }
+migration = { path = "migration" }
