--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
 opencv = "0.94.4"
 entity = { path = "entity" }
 migration = { path = "migration" }
+log = { version = "0.4", features = ["kv"]}
