--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,21 @@ edition = "2024"
 default = []
 
 [workspace]
-members = [".", "entity", "migration"]
+members = [".", "entity", "log", "migration"]
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
-sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
-serde = { version = "1.0", features = ["derive"] }
-confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false}
-opencv = "0.94.4"
+clog = "0.11.0"
+confy = { version = "0.6.1", features = [
+    "yaml_conf",
+], default-features = false }
 entity = { path = "entity" }
+log = { path = "log" }
 migration = { path = "migration" }
-log = { version = "0.4", features = ["kv"]}
+opencv = "0.94.4"
+sea-orm = { version = "1.1.0", features = [
+    "sqlx-mysql",
+    "runtime-tokio-native-tls",
+    "macros",
+] }
+serde = { version = "1.0", features = ["derive"] }
