--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ sea-orm = { version = "1.1.0", features = [
     "macros",
 ] }
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.44.2", features = ["full"] }
+
