Add anyhow dependency and enhance frame metrics tracking
src/cv/frame_metrics.rs now tracks comprehensive performance stats including
average, min and max FPS with detailed logging. Added MatViewND for safer
matrix access and improved error handling throughout the application.

Co-authored-by: ivvil <ivvil412@gmail.com>

--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -21,3 +21,6 @@ features = [
   # "sqlx-postgres",         # `DATABASE_DRIVER` feature
   "sqlx-mysql", "runtime-tokio-native-tls"
 ]
+
+[lints.clippy]
+unreachable_code = "warn"
