--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,4 @@ sea-orm = { version = "1.1.0", features = [
 ] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.44.2", features = ["full"] }
-
+anyhow = "1.0.68"
