--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 default = []
 
 [workspace]
-members = [".", "entity", "log", "migration"]
+members = [".", "log"]
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
@@ -15,15 +15,8 @@ clog = "0.11.0"
 confy = { version = "0.6.1", features = [
     "yaml_conf",
 ], default-features = false }
-entity = { path = "entity" }
 log = { path = "log" }
-migration = { path = "migration" }
 opencv = "0.94.4"
-sea-orm = { version = "1.1.0", features = [
-    "sqlx-mysql",
-    "runtime-tokio-native-tls",
-    "macros",
-] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.44.2", features = ["full"] }
 anyhow = "1.0.68"
