--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,21 +15,28 @@ debug = 2
 # [build]
 # rustflags = ["-C", "force-frame-pointers=yes", "-C", "symbol-mangling-version=v0"]
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = "symbols"
 
 [workspace]
 members = [".", "log"]
 
 [dependencies]
-anyhow = "1.0.68"
-clap = { version = "4.5.37", features = ["derive"] }
-clog = "0.11.0"
-confy = { version = "0.6.1", features = [
+anyhow = "1.0.98"
+clap = { version = "4.5.38", features = ["derive"] }
+confy = { version = "1.0.0", features = [
   "yaml_conf",
 ], default-features = false }
-csv = "1.2"
+csv = "1.3.1"
 log = { path = "log" }
 opencv = "0.94.4"
 pathfinding = "4.14.0"
+rayon = "1.10.0"
 regex = "1.11.1"
-serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.44.2", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
+smallvec = "1.15.0"
+tokio = { version = "1.45.1", features = ["full"] }
