--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,8 @@ regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 smallvec = "1.15.0"
 tokio = { version = "1.45.1", features = ["full"] }
+hex = "0.4.3"
+hmac = "0.12.1"
+once_cell = "1.21.3"
+sha2 = "0.10.9"
+reqwest = { version = "0.12", features = ["json"] }
